--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,5 +22,21 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
+}
+
+.bg {
+  background: url('../../public/bg.png');
+  background-size: cover;
+}
+
+.backdrop {
+  backdrop-filter: blur(10px);
+  background: url('../../public/bg.png');
+  background-size: cover;
+}
+
+.msg-bg {
+  background: #95E443;
+  background: linear-gradient(0deg, rgba(149, 228, 67, 1) 0%, rgba(255, 255, 255, 1) 100%);
 }
